Fixed the horizontal scroll bar and fixed sticky of nav bar

--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 #nav {
-  width: 100vw;
+  width: 98vw;
+  margin:auto;
   display: flex;
   padding: 10px;
   align-items: center;
@@ -81,7 +82,8 @@
   font-size: 15px;
 }
 #main {
-  width: 100vw;
+  width: 90vw;
+  margin:auto;
   /* display: flex; */
   flex-direction: column;
   box-sizing: border-box;
@@ -231,7 +233,7 @@
   box-shadow: 0px 2px 20px -1px rgba(0, 0, 0, 0.25);
 }
 .card-img{
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .card-img > img {
   width: 100%;
@@ -270,12 +272,12 @@
 }
 
 #footer {
-  width: 100vw;
+  width: 90vw;
+  margin: auto;
   background-image: url("./BackgroundImage.jpg");
   display: flex;
   text-align: center;
   border-radius: 20px;
-  margin: 10px;
   box-sizing: border-box;
   justify-content: space-around;
   align-items: center;
